--- a/css/main.less
+++ b/css/main.less
@@ -766,27 +766,39 @@ textarea {
     }
 
     .content-inner-wrapper {
+        display: flex;
         padding: 14px 0;
         margin: 20px 0 0;
+        width: 100%;
+        align-items: center;
+
+        & > a {
+            display: block;
+            max-width: 30%;
+            margin-right: 15px;
+        }
 
         .text-wrapper {
-            display: table-cell;
+            display: block;
+            min-width: 1px;
+
+            & > a {
+                display: block;
+                text-decoration: none;
+            }
 
             .text-block {
-                float: left;
                 width: 100%;
-                height: 97px;
+                text-decoration: none;
 
                 div.link-title {
                     &.parsed {
-                        text-decoration: none;
                         height: 27px;
                         font-size: 1em;
-                        overflow: hidden;
                         margin-bottom: 8px;
-                        display: inline-block;
                         vertical-align: middle;
                         white-space: nowrap;
+                        overflow: hidden;
                         text-overflow: ellipsis;
 
                         &:hover {
@@ -805,37 +817,18 @@ textarea {
                 }
 
                 div.link-content {
+                    margin-bottom: 16px;
+                    height: 46px;
                     overflow: hidden;
 
                     &.parsed {
-                        height: 46px;
-                        margin-bottom: 5px;
                         line-height: 23px;
                         overflow: hidden;
                         font-size: .8em;
                     }
 
                     &.empty {
-                        margin-top: 20px;
-                        width: 70%;
-                        height: 25px;
-
-                        &:before {
-                            content: '';
-                            width: 80%;
-                            display: block;
-                            height: 5px;
-                            border-radius: 3px;
-                        }
-
-                        &:after {
-                            content: '';
-                            margin-top: 10px;
-                            display: block;
-                            width: 60%;
-                            height: 5px;
-                            border-radius: 3px;
-                        }
+                        display: none;
                     }
                 }
 
@@ -845,7 +838,6 @@ textarea {
             }
 
             .static-link-present {
-                width: 400px;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
@@ -867,12 +859,12 @@ textarea {
         }
 
         div.images {
-            float: left;
-            width: 205px;
-            height: 123px;
+            width: 100%;
+            height: 114px;
+            max-width: 203px;
 
             &.parsed {
-                margin-right: 15px;
+                display: flex;
                 border-radius: 4px;
                 overflow: hidden;
                 position: relative;
@@ -882,17 +874,19 @@ textarea {
                 display: none;
             }
 
-            .image-wrapper * {
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
+            .image-wrapper{
+                display: flex;
                 margin: auto;
-                height: auto;
-                max-width: 203px;
-                max-height: 123px;
-                border-radius: 3px;
+                align-items: center;
+                justify-content: center;
+                
+                * {
+                    margin: auto;
+                    height: auto;
+                    max-width: 203px;
+                    max-height: 114px;
+                    border-radius: 3px;
+                }
             }
         }
     }
